--- a/TestResearchProject/Views/Login/Signup.cshtml
+++ b/TestResearchProject/Views/Login/Signup.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="fullname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Add User" class="btn btn-primary" />
+                <input type="submit" value="Create User" class="btn btn-primary" />
             </div>
         </form>
     </div>
