--- a/TestResearchProject/Views/Shared/_Layout.cshtml
+++ b/TestResearchProject/Views/Shared/_Layout.cshtml
@@ -15,18 +15,12 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TestResearchProject</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Login" asp-action="Dashboard">SURVEY MANAGER</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                @{
-                    var sessionData = @Accessor.HttpContext.Session.GetString("User_ID");
-                    if (sessionData != null)
-                    {
-                        <a asp-controller="Login" asp-action="LogOut" class="btn btn-primary">Log Out</a>
-                    }
-                }
+               
                 
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -39,6 +33,13 @@
                         </li>
                     </ul>
                 </div>
+                @{
+                    var sessionData = @Accessor.HttpContext.Session.GetString("User_ID");
+                    if (sessionData != null)
+                    {
+                        <a asp-controller="Login" asp-action="LogOut" class="btn btn-primary">Log Out</a>
+                    }
+                }
             </div>
         </nav>
     </header>
@@ -48,11 +49,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - TestResearchProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+   
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
