--- a/TestResearchProject/Views/Forms/SurveyFormList.cshtml
+++ b/TestResearchProject/Views/Forms/SurveyFormList.cshtml
@@ -1,77 +1,112 @@
 ﻿@model IEnumerable<TestResearchProject.Models.SurveyFormModel>
 
 @{
-    ViewData["Title"] = "SurveyFormList";
+    ViewData["Title"] = "Survey List";
 }
 
-<h1>SurveyFormList</h1>
+<head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+        .table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: #fff;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+        }
+
+            .table th, .table td {
+                padding: 12px 15px;
+                text-align: left;
+                border-bottom: 1px solid #ddd;
+            }
+
+            .table th {
+                background-color: #f8f8f8;
+                font-weight: bold;
+                color: #333;
+                text-transform: uppercase;
+            }
+
+            .table tbody tr:hover {
+                background-color: #f2f2f2;
+            }
+
+            .table tbody tr:nth-child(even) {
+                background-color: #f9f9f9;
+            }
+
+            .table tbody tr:last-child {
+                border-bottom: none;
+            }
+
+            .table td {
+                vertical-align: middle;
+            }
+
+        .action-links a {
+            color: #007bff;
+            text-decoration: none;
+            margin-right: 10px;
+        }
+
+            .action-links a:hover {
+                text-decoration: underline;
+            }
+    </style>
+</head>
+<h1>Survey List</h1>
+
+
+<table class="table" id="formsTable">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.owner_name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.shop_name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.owner_email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.phone_number)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.survey_user_id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.survey_date)
-            </th>
+            <th>@Html.DisplayNameFor(model => model.owner_name)</th>
+            <th>@Html.DisplayNameFor(model => model.shop_name)</th>
+            <th>@Html.DisplayNameFor(model => model.owner_email)</th>
+            <th>@Html.DisplayNameFor(model => model.address)</th>
+            <th>@Html.DisplayNameFor(model => model.phone_number)</th>
+            <th>@Html.DisplayNameFor(model => model.deviceName)</th>
+            <th>@Html.DisplayNameFor(model => model.survey_date)</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.owner_name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.shop_name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.owner_email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.phone_number)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.survey_user_id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.survey_date)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.owner_name)</td>
+                <td>@Html.DisplayFor(modelItem => item.shop_name)</td>
+                <td>@Html.DisplayFor(modelItem => item.owner_email)</td>
+                <td>@Html.DisplayFor(modelItem => item.address)</td>
+                <td>@Html.DisplayFor(modelItem => item.phone_number)</td>
+                <td>@Html.DisplayFor(modelItem => item.deviceName)</td>
+                <td>@Html.DisplayFor(modelItem => item.survey_date)</td>
+                <td class="action-links">
+                    @Html.ActionLink("Edit", "AddSurveyForm", new { survey_form_id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@section Scripts {
+    <!-- Include jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Include DataTables CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/2.0.7/css/dataTables.dataTables.min.css">
+    <!-- Include DataTables JS -->
+    <script type="text/javascript" src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#formsTable').DataTable();
+        });
+    </script>
+
+}
